# Robotic-Swarms

./: README.md
arlo_interfaces/: CMakeLists.txt  README.md  package.xml
arlo_interfaces/msg/: EstadoArlo.msg
arlo_interfaces/srv/: GetImportantWeights.srv
cognitive_architecture/: CMakeLists.txt  package.xml
cognitive_architecture/cognitive_architecture/: corteza_motora_primaria.py  lobulo_temporal.py
cognitive_architecture/include/cognitive_architecture/: corteza_motora_secundaria.h  corteza_motora_secundaria.hpp  corteza_premotora.h  corteza_premotora.hpp  miscelaneo.h  miscelaneo.hpp  robot.h  robot.hpp
cognitive_architecture/include/cognitive_architecture/Algoritmo_Evolutivo/: Estadisticas.hpp  GeneticoSimple.h  GeneticoSimple.hpp  Individuo.h  Individuo.hpp  RobotNaviFun.h  RobotNaviFun.hpp
cognitive_architecture/include/cognitive_architecture/Red_Neuronal/: NeuroControllerDriver.h  NeuroControllerDriver.hpp
cognitive_architecture/include/cognitive_architecture/control_simulacion/: srvED_Multiple_Goals.h  (+4 more)
cognitive_architecture/launch/: dummys.launch.py  gazebo.launch.py  meta_trainning.launch.py
cognitive_architecture/models/arlo/: model.sdf
cognitive_architecture/models/cerebral_carpet/: cerebral_carpet.sdf
cognitive_architecture/scripts/: Controlador_individuo.py  prueba_alan.py
cognitive_architecture/src/: NeuroControllerDriver.cpp  controlador_cpp.cpp  controlador_meta.cpp
cognitive_architecture/worlds/: arena_cerebral.world
nodos_extra/: AreaMotoraSupProp.cpp  SistemaLimbico.cpp  areaMotoraPre.cpp  corteza_prefrontal.cpp  talamo.cpp
(+4 files in other folders)
